# diss

./: README.md
ur10_gripper_vision/: CMakeLists.txt  package.xml  recordTrial.sh
ur10_gripper_vision/launch/: ur10_object_detection.launch
ur10_gripper_vision/src/: filterPoints.cpp  objectPos.cpp  segment_blue.cpp  segment_green.cpp  segment_red.cpp  segment_yellow.cpp
usb_cam/launch/: bothCams.launch  side_cam.launch  wrist_cam.launch
