<package>

  <name>ur10_gripper_vision</name>
  <version>0.3.0</version>
  <description>
     Pointcloud and Camera handling for UR10 arm
  </description>
  <author email="faizerdini@gmail.com">Faiz</author>
  <maintainer email="faizerdini@gmail.com">Faiz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
